	Make all hyperlinks relative instead of full URLs.

	* bin/make-package-links.sh: Add a script that creates a forest of
	symlinks to the files in the PO-files/ subdirectory, but arranged in
	a subdir per package instead of per language.

	* bin/po-register: Regenerate the static pages also when running dry;
	there's no harm in that, and it's a good test.

2007-06-21  Benno Schulenberg  <benno@vertaalt.nl>

	* po/*: Add Finnish and Irish translations of the TP-robot, update
	the others with differentiated robot/coordinator addresses.

	* Makefile: Store the tp-robot.pot file among the po files, but
	let svn ignore it.

	* bin/po-register: Stop gettextizing messages to maintainers and
	team leaders when they get output in English only anyway.  Spare
	the translators of tp-robot some pointless work.

	* lib/run.py, bin/tp-robot: Shorten some lines to prevent needless
	wraps in the pot file.

	* bin/tp-robot: Do not whine, and be a little clearer.

	* lib/localweb.py, bin/po-register: Add a function to store a
	produced HTML page in a file, and generate updated HTML pages as
	soon as a PO or POT file is registered.

	* lib/config.py: Adjust for change of domain name.

	* bin/po-register, lib/localweb.py, bin/generate_pages:
	Regenerate the team and domain pages after the relevant statistics
	have been calculated.  Add the ability to generate the index pages.
	Add a program to regenerate all pages in a single batch.


2007-06-20  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-register: Stop gettextizing local progress and error
	messages.

	* Makefile: Include only the relevant files into the pot file.

	* bin/tp-robot, lib/run.py: Do not mark simple strings as
	non-gettextizable; there's no need.

	* lib/po.py: Make two header line a bit more accurate.

	* doc/index.html: Correct two paths.

	* ChangeLog: Tiny corrections.

2007-06-18  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/config.py, lib/data.py, lib/editor.py, lib/htmlpage.py,