@@ -1,7 +1,6 @@
 Next:
 * rename index.html to welcome.html
 * do the file searching for generating a domain page in a smarter way
-* regenerate team and domain indexes after registry was modified
 * reject PO files for which translated strings are under 5%
 * have the robot check the subject line with the actual contents
   of the email, or at least rewrite the subject line with the
