@@ -23,6 +23,9 @@
 	* bin/po-register: Regenerate the static pages also when running dry;
 	there's no harm in that, and it's a good test.
 
+	* Makefile, registry/Makefile: Regenerate the static team and domain
+	index pages when the registry has been modified.
+
 2007-06-21  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* po/*: Add Finnish and Irish translations of the TP-robot, update
